--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "json-server": "^0.17.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-time-picker": "^6.6.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
